--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
         id="menu"
         style="width: 300px; background: aliceblue; padding: 1.5rem;"
       ></div>
-      <div id="content" style="flex-grow: 1; padding: 1.5rem;"></div>
+      <div style="flex-grow: 1; padding: 1.5rem;">
+        <div id="content"></div>
+        <div id="vue-content"></div>
+      </div>
     </div>
   </body>
 </html>
