--- a/root-application/index.html
+++ b/root-application/index.html
@@ -1,26 +1,35 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Root App</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="importmap-type" content="systemjs-importmap">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="importmap-type" content="systemjs-importmap" />
+    <!-- Links to all our apps, can be server-side-rendered-->
     <script type="systemjs-importmap">
       {
         "imports": {
-          "header": "http://localhost:8081/header.js",
+          "header": "http://localhost:5001/header.js",
+          "orders": "http://localhost:5002/orders.js",
+          "products": "http://localhost:5003/products.js",
+
           "single-spa": "https://cdnjs.cloudflare.com/ajax/libs/single-spa/4.3.7/system/single-spa.min.js"
         }
       }
     </script>
-    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/single-spa/4.3.7/system/single-spa.min.js" as="script" crossorigin="anonymous" />
+    <link
+      rel="preload"
+      href="https://cdnjs.cloudflare.com/ajax/libs/single-spa/4.3.7/system/single-spa.min.js"
+      as="script"
+      crossorigin="anonymous"
+    />
     <script src="https://unpkg.com/import-map-overrides@1.7.2/dist/import-map-overrides.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/6.1.1/system.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/6.1.1/extras/amd.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/6.1.1/extras/named-exports.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/6.1.1/extras/named-register.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/6.1.1/extras/use-default.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/6.1.9/system.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/6.1.9/extras/amd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/6.1.9/extras/named-exports.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/6.1.9/extras/named-register.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/6.1.9/extras/use-default.min.js"></script>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css"
@@ -29,21 +38,50 @@
   <body>
     <script>
       (function() {
-        Promise.all([System.import('single-spa')]).then(function (modules) {
+        Promise.all([System.import('single-spa')]).then(function(modules) {
           var singleSpa = modules[0];
 
           singleSpa.registerApplication(
             'header',
             () => System.import('header'),
-            location => true
+            location => true,
+          );
+
+          singleSpa.registerApplication(
+            'orders',
+            () => System.import('orders'),
+            exactPath('/'),
+          );
+
+          singleSpa.registerApplication(
+            'products',
+            () => System.import('products'),
+            pathPrefix('/products'),
           );
 
           singleSpa.start();
-        })
-      })()
+
+          // Helper functions to deal with url
+          function pathPrefix(prefix) {
+            return function(location) {
+              return location.pathname.startsWith(`${prefix}`);
+            };
+          }
+
+          function exactPath(path) {
+            return function(location) {
+              return location.pathname === path || location.pathname === path + '/';
+            };
+          }
+
+        });
+      })();
     </script>
     <!-- See https://github.com/joeldenning/import-map-overrides#user-interface  -->
-    <import-map-overrides-full show-when-local-storage="overrides-ui"></import-map-overrides-full>
+    <import-map-overrides-full
+      show-when-local-storage="overrides-ui"
+    ></import-map-overrides-full>
     <div id="header"></div>
+    <div id="content"></div>
   </body>
 </html>
